--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   flutter_bloc: ^8.0.0
+  firebase_core: ^2.4.0
+  firebase_crashlytics: ^3.0.8
 
 dev_dependencies:
   mockito: ^5.0.8
