--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  provider: ^6.0.3
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.2
   google_fonts: ^3.0.1
@@ -40,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   firebase_core: ^2.4.0
   firebase_crashlytics: ^3.0.8
+  firebase_analytics: ^10.0.8
 
 dev_dependencies:
   mockito: ^5.0.8
